package com.example.simplejni

const val NameFieldTag = "NameField"
const val JniSwitchTag = "JniSwitch"
